--- a/cube-desfinder/css/style.css
+++ b/cube-desfinder/css/style.css
@@ -61,7 +61,7 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: rotateY(180deg) translate3d(0px, 0px, -64px);
+    transform: translate3d(0px, 0px, -64px);
 }
 .left {
     position: absolute;
