--- a/cube-desfinder/css/style.css
+++ b/cube-desfinder/css/style.css
@@ -52,7 +52,7 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: translateZ(-64px);
+    transform: translateZ(64px);
 }
 .back {
     background-color: #ccc;
@@ -70,7 +70,10 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: translateX(-64px) rotateY(90deg) rotateX(90deg);
+    transform: translateX(-64px) 
+    rotateX(90deg)
+    rotateY(90deg) 
+    rotateZ(90deg);
 }
 .top {
     position: absolute;
@@ -88,7 +91,10 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: translateX(64px) rotateY(90deg)  rotateX(90deg);
+    transform: translateX(64px)
+    rotateX(90deg)
+    rotateY(90deg) 
+    rotateZ(90deg);
 }
 .bottom {
     position: absolute;
