--- a/cube-defender/css/style.css
+++ b/cube-defender/css/style.css
@@ -32,8 +32,8 @@ html, body {
 #title {
      width: 100%;
      display: flex;
-     justify-content: center;
-     align-items: center;
+     justify-content: space-in-between;
+     align-items: space-in-between;
      flex-direction: row;
      text-align: center;
 }
