--- a/cube-defender/css/style.css
+++ b/cube-defender/css/style.css
@@ -32,6 +32,11 @@ html, body {
 .modal-title {
      color: #000;
 }
+#add {
+     position: fixed;
+     top: 5vh;
+     font-size: 50px;
+}
 #previous {
      position: fixed;
      top: 20vh;
