--- a/cube-defender/css/anim/loading.css
+++ b/cube-defender/css/anim/loading.css
@@ -11,6 +11,7 @@
   height: 13px;
   border-radius: 50%;
   background: #fff;
+  -webkit-transform-style: initial;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
