--- a/cube-defender/css/anim/loading.css
+++ b/cube-defender/css/anim/loading.css
@@ -3,6 +3,7 @@
   position: absolute;
   width: 80px;
   height: 80px;
+  -webkit-transform-style: initial;
 }
 .lds-ellipsis div {
   position: absolute;
