--- a/cube-defender/css/style.css
+++ b/cube-defender/css/style.css
@@ -29,6 +29,17 @@ html, body {
      text-align: center;
      overflow: hidden;
 }
+#authentication {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     text-align: center;
+     overflow: hidden;
+     width: 100%;
+     height: 100%;
+     z-index: 9999;
+}
 .modal-title {
      color: #000;
 }
@@ -61,11 +72,11 @@ html, body {
     align-items: center;
     flex-direction: column;
     -webkit-transform-style: preserve-3d;
-    z-index: 9999;
+    z-index: 9998;
 }
 .front {
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     position: absolute;
     margin-left: 0px;
     margin-top: 0px;
@@ -76,7 +87,7 @@ html, body {
 }
 .back {
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     position: absolute;
     width: 128px;
     height: 128px;
@@ -86,7 +97,7 @@ html, body {
 .left {
     position: absolute;
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
@@ -95,7 +106,7 @@ html, body {
 .top {
     position: absolute;
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
@@ -104,7 +115,7 @@ html, body {
 .right {
     position: absolute;
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
@@ -113,7 +124,7 @@ html, body {
 .bottom {
     position: absolute;
     background-color: #ccc;
-    border: 4px solid #000;
+    border: 2px solid #000;
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
@@ -131,6 +142,7 @@ html, body {
     border: 1px black solid;
     background-color: #212026;
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    z-index: 9999;
 }
 
 #opacity {
@@ -152,4 +164,5 @@ html, body {
     left: 10px;
     bottom: 10px;
     margin: 0px;
+    z-index: 9999;
 }
