--- a/cube-defender/css/style.css
+++ b/cube-defender/css/style.css
@@ -178,6 +178,9 @@ html, body {
     bottom: 10px;
     margin: 0px;
 }
+#face-menu, #cube-modal {
+    z-index: 99999;
+}
 
 #version-info {
     text-align: left;
