--- a/cube-defender/css/style.css
+++ b/cube-defender/css/style.css
@@ -178,7 +178,9 @@ html, body {
     bottom: 10px;
     margin: 0px;
 }
-#face-menu, #cube-modal {
+#dropdown,
+#face-menu, 
+#cube-modal {
     z-index: 99999;
 }
 
