--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -66,7 +66,13 @@ html, body {
 }
 #add {
      position: fixed;
-     top: 5vh;
+     top: 2vh;
+     left: 5vw;
+     font-size: 50px;
+}
+#delete {
+     position: fixed;
+     top: 12vh;
      left: 5vw;
      font-size: 50px;
 }
