--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -74,7 +74,14 @@ html, body {
      position: fixed;
      top: 12vh;
      left: 5vw;
-     font-size: 50px;
+     font-size: 40px;
+}
+#record-no {
+     position: fixed;
+     top: 12vh;
+     right: 5vw;
+     font-size: 30px;
+     text-align: right;
 }
 #previous {
      position: fixed;
