--- a/cube-scanner/css/anim/loading.css
+++ b/cube-scanner/css/anim/loading.css
@@ -58,6 +58,7 @@
 
 #loading {
   position: absolute;
+  background-color: rgba(255,255,255,0.5);
   width: 80px;
   height: 80px;
   display: flex;
