--- a/cube-scanner/css/anim/loading.css
+++ b/cube-scanner/css/anim/loading.css
@@ -119,9 +119,9 @@
 
 @keyframes cube-rotating {
   0% {
-    transform: rotateX(-30);
+    transform: rotateX(0) rotateY(45) rotateZ(0);
   }
   100% {
-    transform: rotateX(-30) rotateY(360);
+    transform: rotateX(0) rotateY(45) rotateZ(360);
   }
 }
