--- a/cube-scanner/css/anim/loading.css
+++ b/cube-scanner/css/anim/loading.css
@@ -11,12 +11,12 @@
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
     animation: cube-rotating 2s infinite;
 }
-#loading .poison {
+#loading .blood {
     position: absolute;
-    background-color: rgba(0,125,0,0.5);
-    border: 2px solid #080;
-    width: 4px;
-    height: 4px;
+    background-color: rgba(180,0,0,0.5);
+    border: 2px solid #a00;
+    width: 8px;
+    height: 8px;
     -webkit-transform-style: preserve-3d;
     transform: 
     translateX(-16px)
