--- a/cube-scanner/css/anim/loading.css
+++ b/cube-scanner/css/anim/loading.css
@@ -11,6 +11,14 @@
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
     animation: cube-rotating 2s infinite;
 }
+#loading .sperm-orbit {
+    position: absolute;
+    border: 2px solid #ccc;
+    width: 44px;
+    height: 44px;
+    -webkit-transform-style: preserve-3d;
+    transform: ;
+}
 #loading .sperm-front {
     position: absolute;
     background-color: rgba(180,0,0,0.5);
