--- a/cube-scanner/css/anim/loading.css
+++ b/cube-scanner/css/anim/loading.css
@@ -13,9 +13,9 @@
 }
 #loading .sperm-orbit {
     position: absolute;
-    border: 2px solid #ccc;
-    width: 44px;
-    height: 44px;
+    border: 2px solid #333;
+    width: 96px;
+    height: 96px;
     -webkit-transform-style: preserve-3d;
     transform: ;
 }
