--- a/sphere-scanner/css/anim/loading.css
+++ b/sphere-scanner/css/anim/loading.css
@@ -96,6 +96,60 @@
     translateZ(0px)
     rotateX(-90deg);
 }
+#loading .front {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateZ(16px);
+}
+#loading .back {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateZ(-16px) rotateY(180deg);
+}
+#loading .left {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateX(-16px) rotateY(-90deg);
+}
+#loading .top {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateY(-16px) rotateX(90deg);
+}
+#loading .right {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateX(16px) rotateY(90deg);
+}
+#loading .bottom {
+    position: absolute;
+    background-color: rgba(255,255,255,0.5);
+    border: 2px solid #fff;
+    width: 32px;
+    height: 32px;
+    -webkit-transform-style: preserve-3d;
+    transform:  translateY(16px) rotateX(-90deg);
+}
 
 @keyframes cube-rotating {
   0% {
