--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -64,6 +64,9 @@ html, body {
 .modal-title {
      color: #000;
 }
+.active {
+     color: #f55;
+}
 #add {
      position: fixed;
      top: 2vh;
@@ -174,7 +177,6 @@ html, body {
     -webkit-transform-style: preserve-3d;
     transform:  translateY(64px) rotateX(-90deg);
 }
-
 #camera-canvas {
     margin-bottom: 20px;
     display: flex;
@@ -188,12 +190,10 @@ html, body {
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     z-index: 9999;
 }
-
 #opacity {
     position: absolute;
     transform: rotateY(90deg);
 }
-
 #dropdown {
     text-align: left;
     position: fixed;
