--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -24,6 +24,32 @@ html, body {
      text-align: center;
      overflow: hidden;
 }
+#light {
+     background-color: #000;
+     position: fixed;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     text-align: center;
+     overflow: hidden;
+     width: 100%;
+     height: 100%;
+     z-index: 9999;
+}
+#authentication {
+     background-color: #2f2e40;
+     position: fixed;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     text-align: center;
+     overflow: hidden;
+     width: 100%;
+     height: 100%;
+     z-index: 9999;
+}
 #auth-header {
      position: fixed;
      display: flex;
@@ -46,19 +72,6 @@ html, body {
      overflow: hidden;
      width: 100%;
      bottom: 20vh;
-     z-index: 9999;
-}
-#authentication {
-     background-color: #2f2e40;
-     position: fixed;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: column;
-     text-align: center;
-     overflow: hidden;
-     width: 100%;
-     height: 100%;
      z-index: 9999;
 }
 .modal-title {
