--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -24,7 +24,7 @@ html, body {
      text-align: center;
      overflow: hidden;
 }
-#light {
+#interface {
      background-color: #000;
      position: fixed;
      display: flex;
