--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -122,7 +122,7 @@ html, body {
     margin-left: 0px;
     margin-top: 0px;
     margin-bottom: 50px;
-    width: 128px;
+    width: 100%;
     height: 128px;
     display: flex;
     justify-content: center;
