--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -4,6 +4,7 @@ html, body {
     font-size: 20px;
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     font-weight: 400 !important;
     background-color: #2f2e40;
@@ -122,7 +123,7 @@ html, body {
     margin-left: 0px;
     margin-top: 0px;
     margin-bottom: 50px;
-    width: 100%;
+    width: 128px;
     height: 128px;
     display: flex;
     justify-content: center;
