--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -24,7 +24,10 @@ html, body {
      flex-direction: column;
      text-align: center;
      overflow: hidden;
-     rotateY: -180deg;
+     -transform: rotateX(-180deg);
+}
+body {
+     transform: rotateX(-180deg);
 }
 #interface {
      background-color: #000;
