--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -135,6 +135,13 @@ body {
      right: 5vw;
      font-size: 30px;
 }
+#translateY {
+     position: fixed;
+     top: 40vh;
+     left: 8vw;
+     font-size: 50px;
+     transform: rotateZ(-90deg);
+}
 #cube-container {
     margin-left: 0px;
     margin-top: 0px;
