--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -162,6 +162,10 @@ body {
     -webkit-transform-style: preserve-3d;
     z-index: 9998;
 }
+#cube-container img {
+    outline: solid black;
+    outline-offset: 1px;:
+}
 #cube-container .front {
     background-color: #ccc;
     border: 2px solid #000;
