--- a/cube-map/css/style.css
+++ b/cube-map/css/style.css
@@ -281,3 +281,72 @@ html, body {
     margin: 0px;
     z-index: 9999;
 }
+
+#cube-container {
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+    width: 128px;
+    height: 128px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    -webkit-transform-style: preserve-3d;
+    z-index: 9998;
+}
+#cube-container img {
+    background-color: rgba(0,0,0,0);
+    outline: solid black;
+    outline-offset: 0px;:
+}
+#cube-container .front {
+    border: 2px solid #000;
+    position: absolute;
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateZ(64px);
+}
+#cube-container .back {
+    border: 2px solid #000;
+    position: absolute;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateZ(-64px) rotateY(180deg);
+}
+#cube-container .left {
+    position: absolute;
+    border: 2px solid #000;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateX(-64px) rotateY(-90deg);
+}
+#cube-container .top {
+    position: absolute;
+    border: 2px solid #000;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateY(-64px) rotateX(90deg);
+}
+#cube-container .right {
+    position: absolute;
+    border: 2px solid #000;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateX(64px) rotateY(90deg);
+}
+#cube-container .bottom {
+    position: absolute;
+    border: 2px solid #000;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform:  translateY(64px) rotateX(-90deg);
+}
