--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -92,6 +92,7 @@ body {
      border: 4px solid black;
      width: 16vw;
      height: 16vw;
+     border-radius: 50%;
 }
 #add {
      position: fixed;
