--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -7,7 +7,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-weight: 400 !important;
-    background-color: #2f2e40;
+    background: #2f2e40;
     color: #fff;
     --background-image: url(../img/100.jpg);
     background-position: center;
@@ -43,7 +43,7 @@ body {
      z-index: 9999;
 }
 #authentication {
-     background-color: #2f2e40;
+     background: #2f2e40;
      position: fixed;
      display: flex;
      justify-content: center;
@@ -91,9 +91,9 @@ body {
      left: 8vw;
      border: 4px solid black;
      width: 16vw;
-     height: 16vw;
+     hebackground
      border-radius: 50%;
-     background-color: #2f2e40;
+     background: #2f2e40;
 }
 #clr-picker {
      position: fixed;
