--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -91,9 +91,9 @@ body {
      left: 8vw;
      border: 4px solid black;
      width: 16vw;
-     hebackground
+     height: 16vw;
      border-radius: 50%;
-     background: #2f2e40;
+     background-color: #2f2e40;
 }
 #clr-picker {
      position: fixed;
