--- a/cube-scanner/css/print-cube.css
+++ b/cube-scanner/css/print-cube.css
@@ -1,17 +1,12 @@
-@media print {
-  * { margin: 0 !important; padding: 0 !important; }
-  #controls, .footer, .footerarea{ display: none; }
-  html, body {
+/*@media print {*/
+* { margin: 0 !important; padding: 0 !important; }
+#controls, .footer, .footerarea{ display: none; }
+html, body {
     /*changing width to 100% causes huge overflow and wrap*/
     height:100%; 
     overflow: hidden;
     background: #FFF; 
     font-size: 9.5pt;
-  }
-
-.template { width: auto; left:0; top:0; }
-  img { width:100%; }
-  li { margin: 0 0 10px 20px !important;}
 }
 
 #cube-container {
