--- a/cube-scanner/css/print-cube.css
+++ b/cube-scanner/css/print-cube.css
@@ -22,14 +22,12 @@ html, body {
    align-items: center;
    flex-direction: row;
    border: 1mm solid #ccc;
-}
-#cube-container {
    margin: 0px;
+   display: block;
 }
 #cube-container img {
    width: 5cm;
    height: 5cm;
-   margin: 0px;
    border: 1mm solid black;
 }
 .space {
