--- a/cube-scanner/css/print-cube.css
+++ b/cube-scanner/css/print-cube.css
@@ -24,6 +24,8 @@ html, body {
    flex-wrap: wrap;
    border: 1mm solid #ccc;
    margin: 0px;
+}
+#cube-container div{
    display: inline-block;
 }
 #cube-container img {
