--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -181,7 +181,7 @@ body {
     outline-style: solid;
     outline-color: black;
     outline-width: 1px;
-    outline-offset: 0px;:
+    outline-offset: 0px;
     object-fit: cover;
 }
 #cube-container .front {
@@ -243,6 +243,15 @@ body {
     height: 64px;
     -webkit-transform-style: preserve-3d;
     transform:  translateY(16px);
+}
+#cube-container .ground {
+    position: absolute;
+    border: 2px solid #000;
+    width: 128px;
+    height: 128px;
+    -webkit-transform-style: preserve-3d;
+    transform:  translateY(64px) 
+    rotateX(90deg);
 }
 #camera-canvas {
     margin-bottom: 20px;
