--- a/cube-scanner/css/style.css
+++ b/cube-scanner/css/style.css
@@ -155,6 +155,11 @@ body {
      right: 8vw;
      font-size: 30px;
 }
+#jump {
+     top: 35vh;
+     left: 8vw;
+     font-size: 50px;
+}
 #translateY {
      position: fixed;
      top: 45vh;
