--- a/3d/londrina/css/index.css
+++ b/3d/londrina/css/index.css
@@ -32,3 +32,10 @@ html, body {
     margin: 0px;
     z-index: 9999;
 }
+
+/* */
+#matter-js {
+   position: fixed;
+   width: 100%;
+   height: 100%;
+}
