--- a/3d/londrina/css/index.css
+++ b/3d/londrina/css/index.css
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background: #fff;
     color: #000;
     background-position: center;
     background-size: cover;
@@ -36,6 +36,7 @@ html, body {
 /* */
 #matter-js {
    position: fixed;
+   backgroud: #ccc;
    width: 100%;
    height: 100%;
 }
