--- a/3d/londrina/css/index.css
+++ b/3d/londrina/css/index.css
@@ -36,7 +36,7 @@ html, body {
 /* */
 #matter-js {
    position: fixed;
-   backgroud: #ccc;
+   background: #ccc;
    width: 100%;
    height: 100%;
 }
