--- a/3d/londrina/css/index.css
+++ b/3d/londrina/css/index.css
@@ -8,7 +8,7 @@ html, body {
     width: 100%;
     height: 100%;
     background: #fff;
-    color: #000;
+    color: #fff;
     background-position: center;
     background-size: cover;
     -webkit-touch-callout: none;
@@ -52,4 +52,12 @@ html, body {
     background-color: #212026;
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     z-index: 9999;
+}
+
+/* Controls */
+#matter-js {
+   position: fixed;
+   right: 10px;
+   bottom: 10px;
+   font-size: 30px;
 }
