--- a/3d/londrina/css/index.css
+++ b/3d/londrina/css/index.css
@@ -48,7 +48,7 @@ html, body {
     top: 10px;
     width: 128px;
     height: 128px;
-    border: 1px orange solid;
+    border: 1px orange dashed;
     background-color: #212026;
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     z-index: 9999;
@@ -61,4 +61,5 @@ html, body {
    right: 10px;
    bottom: 10px;
    font-size: 30px;
+   z-index: 9999;
 }
