--- a/2d/londrina/css/index.css
+++ b/2d/londrina/css/index.css
@@ -55,11 +55,16 @@ html, body {
 }
 
 /* Controls */
-#cut {
+#controls {
    position: fixed;
-   color: orange;
    right: 10px;
    bottom: 10px;
    font-size: 30px;
    z-index: 9999;
+}
+#controls #cut {
+   color: orange;
+}
+#controls #key {
+   color: white;
 }
