--- a/2d/londrina/css/index.css
+++ b/2d/londrina/css/index.css
@@ -68,3 +68,14 @@ html, body {
 #controls #key {
    color: white;
 }
+
+/* */
+#iframe {
+   position: fixed;
+   width: 80vw;
+   height: 80vh;
+   left: 10vw;
+   top: 10vw;
+   border: 4px black dashed;
+   z-index: 9999;
+}
