--- a/gyro-audio/css/index.css
+++ b/gyro-audio/css/index.css
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
+    background: #2f2e40;
     color: #fff;
     background-position: center;
     background-size: cover;
@@ -33,27 +33,6 @@ html, body {
     z-index: 9999;
 }
 
-/* */
-#matter-js {
-   position: fixed;
-   background: #ccc;
-   width: 100%;
-   height: 100%;
-}
-
-/* */
-#camera-canvas {
-    position: fixed;
-    left: 10px;
-    top: 10px;
-    width: 128px;
-    height: 128px;
-    border: 1px orange dashed;
-    background-color: #212026;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    z-index: 9999;
-}
-
 /* Controls */
 #controls {
    position: fixed;
@@ -61,12 +40,6 @@ html, body {
    bottom: 10px;
    font-size: 30px;
    z-index: 9999;
-}
-#controls #cut {
-   color: orange;
-}
-#controls #key {
-   color: white;
 }
 
 /* */
