--- a/2d/browser-resworb/css/index.css
+++ b/2d/browser-resworb/css/index.css
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
+    background: #000;
     color: #fff;
     background-position: center;
     background-size: cover;
@@ -36,10 +36,9 @@ html, body {
 /* */
 #iframe {
    position: fixed;
-   width: 100vw;
-   height: 100vh;
-   left: 10vw;
-   top: 10vw;
-   border: 4px black dashed;
+   width: 100%;
+   height: 100%;
+   border: 2px yellow solid
+   border-radius: 25px;
    z-index: 99999;
 }
