--- a/2d/cartoshop/css/index.css
+++ b/2d/cartoshop/css/index.css
@@ -8,7 +8,7 @@ html, body {
     width: 100%;
     height: 100%;
     background: #fff;
-    color: #fff;
+    color: #000;
     background-position: center;
     background-size: cover;
     -webkit-touch-callout: none;
