--- a/2d/cartoshop/css/index.css
+++ b/2d/cartoshop/css/index.css
@@ -3,6 +3,7 @@ html, body {
     font-family: 'Nunito', sans-serif;
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
+    font-weight: 700;
     margin: 0;
     padding: 0;
     width: 100%;
