--- a/2d/cartoshop/css/index.css
+++ b/2d/cartoshop/css/index.css
@@ -57,17 +57,13 @@ html, body {
 
 /* Controls */
 #controls {
+   background: #2f2e40;
    position: fixed;
-   right: 10px;
-   bottom: 10px;
+   width: 100vw;
+   bottom: 0px;
    font-size: 30px;
-   z-index: 9999;
-}
-#controls #cut {
-   color: orange;
-}
-#controls #key {
    color: white;
+   z-index: 9999;
 }
 
 /* */
