--- a/2d/cartoshop/css/index.css
+++ b/2d/cartoshop/css/index.css
@@ -76,7 +76,8 @@ html, body {
    top: 10px;
    width: 50vw;
    height: 20px;
-   border: 2px solid white;
+   border: 2px solid white; 
+   z-index: 9999;
 }
 
 #fuel {
