--- a/2d/cartoshop/css/index.css
+++ b/2d/cartoshop/css/index.css
@@ -71,7 +71,7 @@ html, body {
 }
 
 #fuel {
-   transform: rotateY(180);
+   transform: rotateY(180deg);
    position: fixed;
    right: 10px;
    top: 10px;
